# leaf

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TODO  build.py  conanfile.py  install.bat  install.sh
.github/: FUNDING.yml
.github/workflows/: cmake-multi-platform.yml
apps/: CMakeLists.txt
apps/leaf/: CMakeLists.txt  commands.cpp  leaf.cpp
apps/leaf/src/: commands.cpp  commands.h  leafcommands.cpp  leafcommands.h  main.cpp
apps/updater/: CMakeLists.txt  updater.cpp
cmake/: app.config.cmake  clang.config.cmake  clang.toolchain.cmake  config.cmake  leafconfig.h.in  tools.config.cmake
libs/: CMakeLists.txt
libs/commands/: CMakeLists.txt
libs/commands/include/: LeafCommands.h  commandregistry.h  commands.h
libs/commands/src/: LeafCommands.cpp  build_commands.cpp  commandregistry.cpp  commands.cpp  package_commands.cpp  project_commands.cpp  search_commands.cpp  server_commands.cpp  toolchain_commands.cpp
libs/downloader/: CMakeLists.txt
libs/downloader/include/: downloader.h  downloder.h
libs/downloader/src/: downloader.cpp  main.cpp
libs/easyproc/: CMakeLists.txt
libs/easyproc/include/: easyproc.h
libs/easyproc/src/: easyproc.cpp  main.cpp
libs/generator/: CMakeLists.txt
libs/generator/src/: generator.cpp  main.cpp
libs/include/: utils.h
libs/logger/: CMakeLists.txt
libs/logger/include/: logger.h
libs/logger/src/: logger.cpp
libs/progress/: CMakeLists.txt
libs/progress/include/: progress.h
libs/progress/src/: progress.cpp
libs/server/: CMakeLists.txt
libs/server/include/: server.h
libs/server/src/: server.cpp
libs/utils/: CMakeLists.txt
libs/utils/include/: utils.h
libs/utils/src/: utils.cpp
profiles/: linux_profile  macos_profile  windows_profile
server/public/: app.js  index.html  style.css
src/: CMakeLists.txt  leaf.cpp  leafcommands.cpp  leafcommands.h
src/leaf/: CMakeLists.txt  leaf.cpp  leafcommands.cpp
src/updater/: CMakeLists.txt  updater.cpp
startertemplate/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  app  conanfile.py  generate_project.cpp
startertemplate/apps/: CMakeLists.txt
startertemplate/apps/%APPNAME%/: %APPNAME%.cpp  CMakeLists.txt
startertemplate/apps/%APPNAME%/src/: main.cpp
startertemplate/cmake/: %APPNAME%config.h.in  app.config.cmake  clang.toolchain.cmake  config.cmake  tools.config.cmake
startertemplate/libs/: CMakeLists.txt
startertemplate/libs/%LIBNAME%/: CMakeLists.txt
startertemplate/libs/%LIBNAME%/include/: %LIBNAME%.h
startertemplate/libs/%LIBNAME%/src/: %LIBNAME%.cpp  lib.cpp
startertemplate/src/: CMakeLists.txt
startertemplate/src/%APPNAME%/: %APPNAME%.cpp  CMakeLists.txt
tests/: CMakeLists.txt  main.cpp
tests/src/: main.cpp
